--- a/js/opentok.js-annotations/templates/screenshare.html
+++ b/js/opentok.js-annotations/templates/screenshare.html
@@ -62,6 +62,7 @@
 
         .subscriberContainer {
             position: absolute;
+            display: flex;
             top: 20px;
             left: 20px;
             width: 200px;
